# Phoenix

./: README.md
phoenix/src/: README.md
phoenix/src/ar_tag_gazebo/: package.xml
phoenix/src/ar_tag_gazebo/launch/: spawn_ar_tracking.launch
phoenix/src/ar_tag_gazebo/meshes/: goal.dae
phoenix/src/ar_tag_gazebo/urdf/: ar_2023.urdf  ar_victim.urdf
phoenix/src/goal_detecting/: CMakeLists.txt  package.xml
phoenix/src/goal_detecting/scripts/: goal_detect.py
phoenix/src/phoenix_rescuer/: CMakeLists.txt  package.xml
phoenix/src/phoenix_rescuer/configs/: costmap_common_params.yaml
phoenix/src/phoenix_rescuer/launch/: phoenix_rescuer.launch
phoenix/src/phoenix_rescuer/scripts/: gaz_map  main_controller.py  pose_to_tf.py
phoenix/src/rosbot_description/src/rosbot_description/urdf/: rosbot.gazebo
phoenix/src/seek_and_steer/: CMakeLists.txt  package.xml
phoenix/src/seek_and_steer/launch/: test_figure.launch
phoenix/src/seek_and_steer/scripts/: direct_robot.py
phoenix/src/test1_basicstop/: CMakeLists.txt  package.xml  testing.md
phoenix/src/test1_basicstop/launch/: test_navigation_20191117.launch
phoenix/src/test1_basicstop/scripts/: sending_goal_action.py  test_navigation.launch  test_navigation_after_mapping.launch
